<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.github.hazendaz</groupId>
    <artifactId>base-parent</artifactId>
    <version>41</version>
    <relativePath />
  </parent>

  <groupId>com.github.hazendaz</groupId>
  <artifactId>displaytag-doc</artifactId>
  <packaging>pom</packaging>
  <name>Display tag library documentation</name>
  <version>3.0.0-SNAPSHOT</version>

  <description>The display tag library is an open source suite of custom tags that provide high-level web presentation
    patterns which will work in an MVC model. The library provides a significant amount of functionality while still
    being easy to use.
  </description>

  <url>http://displaytag.sourceforge.net</url>
  <issueManagement>
    <system>github</system>
    <url>https://github.com/hazendaz/displaytag/issues</url>
  </issueManagement>
  <scm>
    <connection>scm:git:ssh://git@github.com/hazendaz/displaytag.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/hazendaz/displaytag.git</developerConnection>
    <url>https://github.com/hazendaz/displaytag/</url>
    <tag>HEAD</tag>
  </scm>
  <inceptionYear>2002</inceptionYear>

  <mailingLists>
    <mailingList>
      <name>Display tag library User Mailing list</name>
      <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-user</subscribe>
      <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-user</unsubscribe>
      <post />
      <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-user</archive>
    </mailingList>
    <mailingList>
      <name>Display tag library Developer Mailing list</name>
      <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-devel</subscribe>
      <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-devel</unsubscribe>
      <post />
      <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-devel</archive>
    </mailingList>
    <mailingList>
      <name>Display tag library Cvs Mailing list</name>
      <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-cvs</subscribe>
      <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-cvs</unsubscribe>
      <post />
      <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-cvs</archive>
    </mailingList>
  </mailingLists>

  <developers>
    <developer>
      <id>fgiust</id>
      <name>Fabrizio Giustina</name>
      <email>fgiust(at)users.sourceforge.net</email>
      <organization>Openmind</organization>
      <organizationUrl>http://www.openmindonline.it</organizationUrl>
      <roles>
        <role>Project admin and main developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>matt</id>
      <name>Matt Raible</name>
      <email>mraible(at)users.sourceforge.net</email>
      <organization>Raible Designs</organization>
      <roles>
        <role>Project admin</role>
      </roles>
      <timezone>-7</timezone>
    </developer>
    <developer>
      <id>rapruitt</id>
      <name>Andy Pruitt</name>
      <email>rapruitt(at)users.sourceforge.net</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <id>jluix</id>
      <name>Jorge Barroso</name>
      <email>jluix(at)users.sourceforge.net</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <id>javabencom</id>
      <name>Benjamin Simpson</name>
      <email>javabencom(at)users.sourceforge.net</email>
      <roles>
        <role>Documentation editor</role>
      </roles>
      <timezone>0</timezone>
    </developer>
    <developer>
      <id>pathoss</id>
      <name>Mathias Bogaert</name>
      <email>pathoss(at)users.sourceforge.net</email>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>0</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Ed Hill</name>
      <email>ed-hill(at)users.sourceforge.net</email>
      <roles>
        <role>Initial developer of the tag library</role>
      </roles>
      <timezone>0</timezone>
    </contributor>
    <contributor>
      <name>Eric Dalquist</name>
      <roles>
        <role>JSR-168 support</role>
      </roles>
    </contributor>
    <contributor>
      <name>Jorge Barroso</name>
    </contributor>
  </contributors>

  <licenses>
    <license>
      <name>MIT</name>
      <url>LICENSE_HEADER</url>
    </license>
  </licenses>

  <organization>
    <name>the Displaytag team</name>
    <url>http://sourceforge.net/projects/displaytag</url>
  </organization>

  <properties>
    <java.version>11</java.version>
    <java.release.version>11</java.release.version>
    <java.test.version>11</java.test.version>
    <java.test.release.version>11</java.test.release.version>

    <!-- Automatic Module Name -->
    <module.name>org.displaytag.parent</module.name>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1757561022</project.build.outputTimestamp>
  </properties>

  <modules>
    <module>displaytag</module>
    <module>displaytag-examples</module>
  </modules>
  <distributionManagement>
    <site>
      <id>gh-pages</id>
      <name>Displaytag GitHub Pages</name>
      <url>git:ssh://git@github.com/hazendaz/displaytag.git?gh-pages#</url>
    </site>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <executions>
          <execution>
            <phase>site</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <copy overwrite="true" todir="src/site" flatten="true">
                  <fileset dir="..">
                    <include name="../src/site/site.xml" />
                  </fileset>
                </copy>
                <replace value="href=&quot;../" token="href=&quot;/" dir="..">
                  <include name="${project.artifactId}/src/site/site.xml" />
                  <exclude name="displaytag-doc/src/site/site.xml" />
                </replace>
                <replace value="href=&quot;" token="href=&quot;../${project.artifactId}/" dir="..">
                  <include name="${project.artifactId}/src/site/site.xml" />
                  <exclude name="displaytag-doc/src/site/site.xml" />
                </replace>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <configuration>
          <rules>
            <enforceBytecodeVersion>
              <!-- Spring is optional, it will require java 17 for jakarta, allowing us to stay on java 11 -->
              <excludes>
                <exclude>org.springframework:spring-aop</exclude>
                <exclude>org.springframework:spring-beans</exclude>
                <exclude>org.springframework:spring-context</exclude>
                <exclude>org.springframework:spring-context-support</exclude>
                <exclude>org.springframework:spring-core</exclude>
                <exclude>org.springframework:spring-expression</exclude>
                <exclude>org.springframework:spring-jcl</exclude>
                <exclude>org.springframework:spring-test</exclude>
                <exclude>org.springframework:spring-web</exclude>
                <exclude>org.springframework:spring-webmvc</exclude>
              </excludes>
            </enforceBytecodeVersion>
          </rules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <property>
              <name>java.awt.headless</name>
              <value>true</value>
            </property>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>io.github.olamy.maven.skins</groupId>
            <artifactId>reflow-velocity-tools</artifactId>
            <version>2.0.0</version>
          </dependency>
          <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
          </dependency>
          <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-module-markdown</artifactId>
            <version>1.12.0</version>
          </dependency>
          <dependency>
            <groupId>net.trajano.wagon</groupId>
            <artifactId>wagon-git</artifactId>
            <version>2.0.3</version>
          </dependency>
          <dependency>
            <groupId>org.apache.maven.wagon</groupId>
            <artifactId>wagon-ssh</artifactId>
            <version>3.5.3</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <licenseSets>
            <licenseSet>
              <includes>
                <include>${project.basedir}/src/**/*.java</include>
              </includes>
            </licenseSet>
          </licenseSets>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>io.github.weblegacy</groupId>
        <artifactId>taglib-maven-plugin</artifactId>
        <version>2.6</version>
      </plugin>
    </plugins>
  </reporting>
</project>
